package behavioral.strategy;

public interface DiscountStrategy {
    double applyDiscount(double total);
}